Fix spacing of social icons links

--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -298,7 +298,7 @@ nav{
   width: 95%;
 }
 .my-work-links-icons{
-  width: 90%;
+  width: 48%;
   }
     .slideshow-container {
     margin-left: 17%;
